--- a/gui.ini
+++ b/gui.ini
@@ -1,7 +1,7 @@
 [General]
-HWP_stepper_angle=0
-text=255
-value=255
+HWP_stepper_angle=0.01121076233249596
+text=0
+value=0
 currentIndex=2
 
 [xGridCheck]
@@ -20,29 +20,29 @@ value=1
 currentIndex=0
 
 [scan3D_num_peaks]
-text=4
-value=4
+text=2
+value=2
 
 [qt_spinbox_lineedit]
-text=1300
+text=25.00
 
 [nMeasLaserSpectra_scanSpectraExp]
 text=0.10000
 value=0.1
 
 [HWP_stepper_MoveTo]
-text=1300
-value=75
+text=5.00
+value=5
 
 [pico_ChB_VRange]
-currentIndex=4
+currentIndex=5
 
 [scan1D_step]
-text=1.000
-value=1
+text=5.000
+value=5
 
 [maxText]
-text=61.093
+text=196.64
 
 [maxTracesCheck]
 text=Max Traces:
@@ -83,12 +83,12 @@ text=Auto Pan Only
 checked=false
 
 [normXBlurSpin]
-text=1300
+text=360.00
 value=0
 
 [andorCameraExposure]
-text=1300
-value=0.01
+text=2.00000
+value=2
 
 [nMeasLaserSpectra_Z_interface_fit]
 text=fit
@@ -103,7 +103,7 @@ text=Frame
 checked=false
 
 [scanPolar_angle]
-text=1300
+text=360.00
 value=360
 
 [mocoMoveAbs_target]
@@ -160,8 +160,8 @@ text=650000
 value=650000
 
 [HWP_move_to_angle]
-text=40.0000
-value=40
+text=50.0000
+value=50
 
 [nMeasLaserSpectra_filePath]
 text=./data/multiScan
@@ -190,12 +190,12 @@ text=rescan2D
 checked=true
 
 [scan3D_threshold_rel]
-text=1300
-value=0.01
+text=0.0010
+value=0.001
 
 [nMeasLaserSpectra_testPolar_start]
-text=115.00
-value=115
+text=130.00
+value=130
 
 [HWP_stepper_wait]
 text=WaitUntilReady
@@ -206,7 +206,7 @@ text=Wait
 checked=true
 
 [scan1D_axis]
-currentIndex=2
+currentIndex=4
 
 [pico_ChA_offset]
 text=0.00
@@ -217,8 +217,8 @@ text=10
 value=10
 
 [shamrockWavelength]
-text=1300
-value=450
+text=541.6667
+value=541.6667
 
 [normTBlurSpin]
 text=0.00
@@ -229,8 +229,8 @@ text=Time range
 checked=false
 
 [fastScan_time_calibr]
-text=1300
-value=7.935964419
+text=6.2610231428
+value=6.2610231428
 
 [logYCheck]
 text=Log Y
@@ -245,11 +245,11 @@ text=Z
 checked=true
 
 [optim1step_zCompensationShift]
-text=-1.667
-value=-1.667
+text=-6.147
+value=-6.147
 
 [Pi_Z_move_to]
-text=1300
+text=50.000
 value=50
 
 [Pi_Velocity]
@@ -288,14 +288,14 @@ text=ExtTrig
 checked=false
 
 [nMeasLaserSpectra_track_channel]
-currentIndex=0
+currentIndex=1
 
 [scan3D_maskThreshold]
-text=1300
+text=60.000
 value=60
 
 [meas_laser_spectra_start]
-text=1300
+text=850
 value=850
 
 [nMeasLaserSpectra_testPolar_step]
@@ -303,7 +303,7 @@ text=8.00
 value=8
 
 [HWP_stepper_step]
-text=1300
+text=0.00
 value=0
 
 [confParam_scan_start]
@@ -315,12 +315,12 @@ text=0
 value=0
 
 [nMeasLaserSpectra_start]
-text=1150
-value=1150
+text=710
+value=710
 
 [laserShutter]
 text=Shutter
-checked=false
+checked=true
 
 [pico_photon_counter]
 text=PC
@@ -331,11 +331,11 @@ text=-20000
 value=-20000
 
 [DAQmx_shift]
-text=1300
+text=360.00
 value=12
 
 [normYBlurSpin]
-text=1300
+text=360.00
 value=0
 
 [confParam_scan_end]
@@ -343,7 +343,7 @@ text=70.00
 value=70
 
 [scan1D_filePath]
-text=./data/scan1D
+text=./data/scan1D-NP4
 
 [pico_photon_counter_threshold]
 text=-0.001
@@ -368,19 +368,19 @@ text=ready
 checked=true
 
 [scan3D_maskStep]
-text=1300
+text=4
 value=4
 
 [raw_data_preview]
 text=preview
-checked=true
+checked=false
 
 [shamrock_MOCO_limit]
-text=1300
+text=320.00
 value=320
 
 [ccs200Exposure]
-text=1300
+text=0.010
 value=0.01
 
 [nMeasLaserSpectra_Z_step]
@@ -388,11 +388,11 @@ text=0.30
 value=0.3
 
 [scan1D_end]
-text=1300
-value=100
+text=360.00
+value=360
 
 [readoutSources]
-currentIndex=2
+currentIndex=1
 
 [shamrockWavelength_to_set]
 text=400.00
@@ -403,15 +403,15 @@ text=1.60
 value=1.6
 
 [nMeasLaserSpectra_Z_interface]
-text=55.2621
-value=55.2621
+text=63.4544
+value=63.4544
 
 [ccs200Live]
 text=live
 checked=false
 
 [shamrockWavelengthShift]
-text=1300
+text=0.00
 value=0
 
 [nMeasLaserSpectra_Z_end]
@@ -419,7 +419,7 @@ text=1.00
 value=1
 
 [Pi_Y_move_to]
-text=1300
+text=360.00
 value=50
 
 [meas_laser_spectra_track_channel]
@@ -449,11 +449,11 @@ checked=true
 currentIndex=0
 
 [meas_laser_spectra_step]
-text=1300
+text=1
 value=1
 
 [Scan3D_min_distance]
-text=1300
+text=1
 value=1
 
 [optim1step_zCompensation]
@@ -495,15 +495,15 @@ value=2
 
 [scan3D_byMask]
 text=maskScan
-checked=true
+checked=false
 
 [nMeasLaserSpectra_testPolar_end]
 text=300.00
 value=300
 
 [optim1step_n]
-text=3
-value=3
+text=2
+value=2
 
 [Pi_X_On]
 text=X
@@ -517,8 +517,8 @@ value=50
 currentIndex=0
 
 [nMeasLaserSpectra_end]
-text=710
-value=710
+text=1300
+value=1300
 
 [shamrock_use_MOCO]
 text=ChangeFilterAt
@@ -564,7 +564,7 @@ text=WaitUntilReady
 checked=false
 
 [rotPiezoStage_Step]
-text=1300
+text=360.00
 value=10
 
 [nMeasLaserSpectra_FloatingWindow]
@@ -581,3 +581,10 @@ value=1300
 [confParam_scan_BG]
 text=0.00
 value=0
+
+[finishLaserOFF]
+text=Finish->LaserOFF
+checked=false
+
+[nMeasLaserSpectra_posOptim]
+currentIndex=0
